Tools/TestWebKitAPI/cocoa/TestWKWebView.h
@@ -87,6 +87,7 @@
 @property (nonatomic, readonly) CGRect caretViewRectInContentCoordinates;
 @property (nonatomic, readonly) NSArray<NSValue *> *selectionViewRectsInContentCoordinates;
 - (_WKActivatedElementInfo *)activatedElementAtPosition:(CGPoint)position;
+- (void)evaluateJavaScriptAndWaitForInputSessionToChange:(NSString *)script;
 @end
 #endif
 
